--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                               <img src="assets/img/rpl1.png" class="img-fluid" alt="Logo">
                              </div>
                              <div class="col-10">
-                                 <h5 class="card-title">NO. ABSEN 5-12108325-Aqila Putri</h5>
-                                 <p class="card-text">PPLG X-1-Cibedug 1</p>
+                                 <h5 class="card-title">NO. ABSEN 5-NIS-NAMA</h5>
+                                 <p class="card-text">ROMBEL-RAYON</p>
                                  <a href="https://www.instagram.com/......" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
                              </div>
                          </div>
@@ -325,9 +325,9 @@
                               <img src="assets/img/rpl1.png" class="img-fluid" alt="Logo">
                              </div>
                              <div class="col-10">
-                                 <h5 class="card-title">NO.13-12108463-Juan Prasetya</h5>
-                                 <p class="card-text">PPLG X 1-cicurug 2</p>
-                                 <a href="https://www.instagram.com/aditamajuanprasetya" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
+                                 <h5 class="card-title">NO. ABSEN 13-NIS-NAMA</h5>
+                                 <p class="card-text">ROMBEL-RAYON</p>
+                                 <a href="https://www.instagram.com/......" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
                              </div>
                          </div>
                         </div>
@@ -682,9 +682,9 @@
                               <img src="assets/img/rpl1.png" class="img-fluid" alt="Logo">
                              </div>
                              <div class="col-10">
-                                 <h5 class="card-title">NO. ABSEN 34-NIS-NAMA</h5>
-                                 <p class="card-text">ROMBEL-RAYON</p>
-                                 <a href="https://www.instagram.com/......" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
+                                 <h5 class="card-title">NO. ABSEN 34-12108823-Vito Aleandra Sw</h5>
+                                 <p class="card-text">PPLG X 1-Cisarua 2</p>
+                                 <a href="https://www.instagram.com/aleandrasw" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
                              </div>
                          </div>
                         </div>
@@ -955,9 +955,9 @@
                                 <img src="assets/img/rpl1.png" class="img-fluid" alt="Logo">
                                </div>
                                <div class="col-10">
-                                   <h5 class="card-title">NO. ABSEN 12-12108453-Huntara Fabian Suba</h5>
-                                   <p class="card-text">PPLG X-2-Sukasari-2</p>
-                                   <a href="https://www.instagram.com/fabiann_saja" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
+                                   <h5 class="card-title">NO. ABSEN 12-NIS-NAMA</h5>
+                                   <p class="card-text">ROMBEL-RAYON</p>
+                                   <a href="https://www.instagram.com/......" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
                                </div>
                            </div>
                           </div>
@@ -989,9 +989,9 @@
                                 <img src="assets/img/rpl1.png" class="img-fluid" alt="Logo">
                                </div>
                                <div class="col-10">
-                                   <h5 class="card-title">NO.14-12108510-Maulana Yusuf</h5>
-                                   <p class="card-text">PPLG X-2-Cibedug 1</p>
-                                   <a href="https://www.instagram.com/maulanayusuf7923" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
+                                   <h5 class="card-title">NO. ABSEN 14-NIS-NAMA</h5>
+                                   <p class="card-text">ROMBEL-RAYON</p>
+                                   <a href="https://www.instagram.com/......" class="btn btn-sm btn-outline-success" target="blank"><i class="mdi mdi-login"></i>Kunjungi IG</a>
                                </div>
                            </div>
                           </div>
